More use of Java 21 methods over custom logic